Docker: verified end to end on EC2, docs updated with the real result
Both the single spark-shell service (local[*]) and the spark-cluster
profile (a real Spark standalone cluster -- separate spark-master/
spark-worker containers, the worker spawning a genuinely separate executor
JVM child process, spark-submit --master spark://spark-master:7077) return
the correct result against the tcp:// vgi-worker container: 100 rows,
sum=4950 for SELECT count(*), sum(value) FROM vgi_example.data.numbers.

This is the real multi-process validation the earlier local-cluster[...]
JVM-mode attempt couldn't provide (documented in CLAUDE.md as abandoned --
an unrelated environment issue). Both the executor-reachability claim and
the Arrow/Netty jar exclusion in assembleDeployDir are now confirmed in a
genuine separate-process deployment, not just Gradle's test-classpath
resolution.

README.md: added a 'Try it with Docker' subsection under Deploying it.
CLAUDE.md: updated the earlier abandoned-validation note with the real
result. docker-compose.yml: verified-end-to-end note with the date and
result, corrected an inaccurate comment about what the spark-cluster
profile demonstrates.